Remove fixed height on “Reset all facets” link to allow responsive text wrapping

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -804,7 +804,6 @@ ul.facetapi-facetapi-checkbox-links.facetapi-processed,
         color: #333333;
         background: #FFFFFF;
         border: 1px solid #336699;
-        height: 35px;
         margin-top: 5px;
 }
 
